11-security-devsecops/10-zero-trust-service-mesh-istio-mtls/k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mesh-secure
  labels:
    istio-injection: enabled
    security.devsecops/zone: secure-mesh
---
apiVersion: v1
kind: Namespace
metadata:
  name: mesh-unmanaged
  labels:
    security.devsecops/zone: unmanaged-attacker
