11-security-devsecops/10-zero-trust-service-mesh-istio-mtls/k8s/05-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: mesh-secure
spec:
  mtls:
    mode: STRICT
