11-security-devsecops/10-zero-trust-service-mesh-istio-mtls/k8s/03-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: mesh-secure
  labels:
    app: frontend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      serviceAccountName: frontend-sa
      containers:
        - name: frontend-client
          image: curlimages/curl:8.10.1
          command:
            - /bin/sh
            - -c
            - "sleep infinity"
          resources:
            limits:
              cpu: 100m
              memory: 64Mi
            requests:
              cpu: 25m
              memory: 32Mi
