11-security-devsecops/10-zero-trust-service-mesh-istio-mtls/k8s/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: mesh-secure
  labels:
    app: backend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
      version: v1
  template:
    metadata:
      labels:
        app: backend
        version: v1
    spec:
      serviceAccountName: backend-sa
      containers:
        - name: payment-api
          image: python:3.11-alpine
          command:
            - python3
            - -c
            - |
              [...]
          ports:
            - name: http
              containerPort: 8080
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: mesh-secure
  labels:
    app: backend
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: backend
